--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
    <h2>Google Map</h2>
    <iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=University of Oxford&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="500px" height="450"></iframe>
 
-   <h2>Favorite Songs</h2>
-   <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/78BWCd70D1X6LMkDZm1UoF?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+   <h2>Favourite Songs</h2>
+   <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/78BWCd70D1X6LMkDZm1UoF?utm_source=generator" width="100%" height="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 </body>
 </html>
