--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <div>
     <h2>Tweets 🐦</h3>
         <section>
-            <iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" class="" title="X Post" src="https://platform.twitter.com/embed/Tweet.html?dnt=false&amp;embedId=twitter-widget-0&amp;&amp;frame=false&amp;hideCard=false&amp;hideThread=false&amp;id=1870343178374578358&amp;lang=en&amp;origin=https%3A%2F%2Fpublish.twitter.width=550px" style="position: static; visibility: visible; width: 550px; height: 703px; display: block; flex-grow: 1;" data-tweet-id="1870343178374578358"></iframe>
+            <iframe  scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" class="" title="X Post" src="https://platform.twitter.com/embed/Tweet.html?dnt=false&amp;embedId=twitter-widget-0&amp;&amp;frame=false&amp;hideCard=false&amp;hideThread=false&amp;id=1870343178374578358&amp;lang=en&amp;origin=https%3A%2F%2Fpublish.twitter.width=550px" style="position: static; visibility: visible; width: 550px; height: 703px; display: block; flex-grow: 1;" data-tweet-id="1870343178374578358"></iframe>
         </section>
    </div>
 
@@ -41,7 +41,7 @@
   <div>
     <h2>Favourite Songs</h2>
     <section>
-     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/78BWCd70D1X6LMkDZm1UoF?utm_source=generator" width="100%" height="300" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+     <iframe  src="https://open.spotify.com/embed/track/78BWCd70D1X6LMkDZm1UoF?utm_source=generator" width="100%" height="300" frameBorder="0"  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" ></iframe>
     </section>
   </div>
 
